--- a/views/ads-details.hbs
+++ b/views/ads-details.hbs
@@ -283,7 +283,7 @@
                   <div class="product-img">
                     <img
                       class="img-fluid"
-                      src="{{allDetail.images}}"
+                      src={{allDetail.images}}
                       alt=""
                     />
                   </div>
